Add directory for experimentation with fixes
"test" dir contains Dockerfile with new base image, fixed netlify
installation and fixed python virtual environment setup.

Issue #641

Signed-off-by: Stanislav Jakuschevskij <stas@two-giants.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,6 @@
-# Ignore node and python module directores when running in a container
-
+# Ignore node and python module directories when running in a container
 node_modules
 .venv
+.netlify
+.vscode
+Dockerfile
